--- a/src/js/views/Login/Login.module.css
+++ b/src/js/views/Login/Login.module.css
@@ -5,7 +5,31 @@
 .inputForm{
     font-size: 14pt;
     outline: none;
-    border-radius: 10px;
+    border-radius: 4px;
+    border: 1px solid lightgray;
+    height: 2.25em;
+    margin: 10px 0 10px 0;
+    padding: 10px;
+}
+.buttLogin {
+    background-color: #f8b663!important;
+    border-color: transparent!important;
+    color: #fff!important;
+    font-weight: bold;
+}
+.buttLogin:hover {
+    background-color: #f7b057!important;
+}
+.forgotP {
+    font-size: 0.8rem;
+    padding-top: 1rem;
+    color: #0b383b;
+    cursor: pointer;
+    text-decoration: none;
+}
+.forgotP:hover {
+    color: #363636;
+     text-decoration: none;
 }
 .coin {
     width: 120px;
