--- a/src/js/views/Login/Login.module.css
+++ b/src/js/views/Login/Login.module.css
@@ -6,10 +6,17 @@
     font-size: 14pt;
     outline: none;
     border-radius: 4px;
-    border: 1px solid lightgray;
+    border: 1px solid #dbdbdb;
     height: 2.25em;
-    margin: 10px 0 10px 0;
+    margin: 5px 0 10px 0;
     padding: 10px;
+    box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
+}
+.inputForm:hover {
+    border-color: #B5B5B8;
+}
+.inputForm:focus {
+    border-color: #0b383b;
 }
 .buttLogin {
     background-color: #f8b663!important;
@@ -34,6 +41,7 @@
 .coin {
     width: 120px;
     height: 120px;
+    margin: 20px;
     animation: spin 15s linear infinite;
 }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
