--- a/src/js/components/NotFound/NotFound.module.css
+++ b/src/js/components/NotFound/NotFound.module.css
@@ -44,7 +44,7 @@
     -webkit-transform: translateX(-50%);
         -ms-transform: translateX(-50%);
             transform: translateX(-50%);
-    /* background: url('../../assets/images/bubble.jpg') no-repeat; */
+    background: url('../../../img/laundry.jpg') no-repeat;
     background-clip: text;
     -webkit-text-fill-color: transparent;
     background-size: cover;
@@ -75,14 +75,14 @@
     font-size: 14px;
     text-decoration: none;
     text-transform: uppercase;
-    background: #0046d5;
+    background: #f8b663;
     display: inline-block;
     padding: 15px 30px;
     border-radius: 40px;
     color: #fff;
     font-weight: 700;
-    -webkit-box-shadow: 0px 4px 15px -5px #0046d5;
-            box-shadow: 0px 4px 15px -5px #0046d5;
+    -webkit-box-shadow: 0px 4px 15px -5px #f7b057;
+            box-shadow: 0px 4px 15px -5px #f7b057;
   }
   
   
