--- a/src/js/views/LoggedHome/LoggedHome.module.css
+++ b/src/js/views/LoggedHome/LoggedHome.module.css
@@ -2,6 +2,9 @@
     margin-top: 80px;
     background-color: #eeeeee;
 }
+.section2 {
+    background-color: #ffffff;
+}
 .available {
     width: 100%;
 }
