--- a/src/js/views/Wallet/Wallet.module.css
+++ b/src/js/views/Wallet/Wallet.module.css
@@ -1,3 +1,10 @@
 .section {
     padding-top: 80px;
+    padding-bottom: 20px;
+    background-color: #eeeeee;
+}
+.white {
+    background-color: white;
+    border-radius: 4px;
+    padding-bottom: 10px;
 }
