--- a/src/js/views/Home/Home.module.css
+++ b/src/js/views/Home/Home.module.css
@@ -24,6 +24,15 @@
     font-weight: 600;
     position: relative;
 }
+.bannerInfo h3:after {
+    content: "";
+        background: #fff;
+        width: 80px;
+        height: 3px;
+        position: absolute;
+        bottom: -20px;
+        left: 46%;
+}
 
 @media (max-width: 1440px) {
     .main {
