--- a/src/js/views/Home/Home.module.css
+++ b/src/js/views/Home/Home.module.css
@@ -33,6 +33,52 @@
         bottom: -20px;
         left: 46%;
 }
+.middleInfo {
+    background: url(../../../img/home/w2.jpg) no-repeat center;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    -moz-background-size: cover;
+}
+.newCust {
+    display: block;
+    font-size: 17px;
+    color: #f8b663;
+    font-weight: 400;
+}
+.buttonStyle {
+    padding: 11px 30px;
+    border: none;
+    color: #fff;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -o-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 600;
+    border: 2px solid #ffcd30;
+    background: #ffcd30;
+    display: inline-block;
+}
+.buttonStyle2 {
+    border: 2px solid #fff;
+    background: transparent;
+}
+.buttonStyle:hover {
+    color: #fff;
+    text-decoration: none;
+    transition: 0.5s all;
+    -webkit-transition: 0.5s all;
+    -webkit-transform: translateY(10px);
+    -ms-transform: translateY(10px);
+    -o-transform: translateY(10px);
+    -ms-transform: translateY(10px);
+    transform: translateY(10px);
+}
 
 @media (max-width: 1440px) {
     .main {
