--- a/src/js/views/Home/Home.module.css
+++ b/src/js/views/Home/Home.module.css
@@ -80,6 +80,14 @@
     transform: translateY(10px);
 }
 
+.ourService {
+    display: block;
+    font-size: 17px;
+    color: #f8b663;
+    font-weight: 400;
+    letter-spacing: 1px;
+}
+
 @media (max-width: 1440px) {
     .main {
         min-height: 700px;
