--- a/src/js/views/LoggedHome/LoggedHome.module.css
+++ b/src/js/views/LoggedHome/LoggedHome.module.css
@@ -2,8 +2,8 @@
    padding-top: 80px;
     background-color: #eeeeee;
 }
-.section2 {
-    background-color: #ffffff;
+.headerPage span {
+     text-align: left;
 }
 .available {
     width: 100%;
