--- a/src/js/views/LoggedHome/LoggedHome.module.css
+++ b/src/js/views/LoggedHome/LoggedHome.module.css
@@ -40,6 +40,9 @@
     text-decoration: none!important;
     color: #0b383b;
 }
+.cardContainer {
+    cursor: pointer;
+}
 .cardContainer:hover {
     opacity: 0.5;
 }
