--- a/src/js/views/Washers/Washers.module.css
+++ b/src/js/views/Washers/Washers.module.css
@@ -8,7 +8,9 @@
     color: #fff!important;
     font-weight: bold;
     margin-left: 20px;
+    cursor: pointer;
 }
 .btnGreen:hover {
     background-color: #f7b057!important;
+    opacity: 0.6;
 }
