--- a/src/App.css
+++ b/src/App.css
@@ -58,3 +58,10 @@ display: none;
     text-decoration: none;
     cursor: pointer;
   }
+
+  @media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    .mobile {
+      display: none;
+    }
+  }
