--- a/src/js/views/Checkout/Checkout.module.css
+++ b/src/js/views/Checkout/Checkout.module.css
@@ -1,5 +1,5 @@
 .section {
     background-color: #eeeeee;
-    /* padding-top: 80px; */
+    padding-top: 80px;
     min-height: 600px!important;
 }
