--- a/src/js/views/Washers/Washers.module.css
+++ b/src/js/views/Washers/Washers.module.css
@@ -1,6 +1,7 @@
 .section {
     padding-top: 100px;
     min-height: 600px!important;
+    background-color: #eeeeee;
 }
 .btnGreen {
     background-color: #f8b663!important;
