--- a/src/js/views/Wallet/Wallet.module.css
+++ b/src/js/views/Wallet/Wallet.module.css
@@ -12,7 +12,7 @@
 .btnOrange {
     background-color: #f8b663!important;
     border-color: transparent!important;
-    color: #fff!important;
+    color: #000000!important;
     font-weight: bold;
 }
 .btnOrange:hover {
