--- a/src/js/components/Timer/Timer.module.css
+++ b/src/js/components/Timer/Timer.module.css
@@ -1,16 +1,16 @@
 .minutes {
-    background-color: black;
-    color: white;
+    /* background-color: blue; */
+    color: black;
     padding: 5px;
-    font-size: 2rem;
+    font-size: 3rem;
 }
 .colone {
     color: black;
-    font-size: 2rem;
+    font-size: 3rem;
 }
 .seconds {
-    background-color: black;
-    color: white;
+    /* background-color: black; */
+    color: black;
     padding: 5px;
-    font-size: 2rem;
+    font-size: 3rem;
 }
