--- a/src/js/views/Login/Login.module.css
+++ b/src/js/views/Login/Login.module.css
@@ -22,7 +22,7 @@
 .buttLogin {
     background-color: #f8b663!important;
     border-color: transparent!important;
-    color: #fff!important;
+    color: #000000!important;
     font-weight: bold;
 }
 .buttLogin:hover {
