--- a/src/js/components/Navbar/Navbar.module.css
+++ b/src/js/components/Navbar/Navbar.module.css
@@ -17,7 +17,7 @@
 .dropBtn {
     background-color: #f8b663;
     border: none;
-    color: #000000;
+    color: #171109;
     outline: none;
     padding: 5px 10px 5px 10px;
     border-radius: 4px;
@@ -25,7 +25,7 @@
     font-weight: bold;
 }
 .dropBtn:hover {
-    background-color: #f7b057;
+    background-color: #836234;
 }
 .dropBtn:focus {
     outline: none;
