--- a/src/js/views/Home/Home.module.css
+++ b/src/js/views/Home/Home.module.css
@@ -16,7 +16,7 @@
 }
 .bannerInfo {
     padding-top: 15em;
-    color: white;
+    color: #000000;
 }
 .bannerInfo p {
     margin: 0;
@@ -35,7 +35,7 @@
 }
 .bannerInfo h3:after {
     content: "";
-        background: #fff;
+        background: #000000;
         width: 80px;
         height: 3px;
         position: absolute;
@@ -53,13 +53,13 @@
 .newCust {
     display: block;
     font-size: 17px;
-    color: #f8b663;
+    color: #7CD1F9;
     font-weight: 400;
 }
 .buttonStyle {
     padding: 11px 30px;
     border: none;
-    color: #fff;
+    color: #ffffff;
     border-radius: 4px;
     -webkit-border-radius: 4px;
     -o-border-radius: 4px;
@@ -69,8 +69,8 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     font-weight: 600;
-    border: 2px solid #ffcd30;
-    background: #ffcd30;
+    border: 2px solid #BBD5E4;
+    background: #7CD1F9;
     display: inline-block;
 }
 .buttonStyle2 {
@@ -92,7 +92,7 @@
 .ourService {
     display: block;
     font-size: 17px;
-    color: #f8b663;
+    color: #7CD1F9;
     font-weight: 400;
     letter-spacing: 1px;
 }
