--- a/src/js/presentation/presentation.module.css
+++ b/src/js/presentation/presentation.module.css
@@ -9,7 +9,7 @@
 .header {
     background-color: black;
     color: white;
-    padding: 20px;
+    height: 70%;
 }
 .firstPage h1 {
     text-align: center;
