--- a/src/js/presentation/presentation.module.css
+++ b/src/js/presentation/presentation.module.css
@@ -6,7 +6,7 @@
 .firstPage {
     background-color: white;
 }
-.header {
+.headerPage1 {
     background-color: black;
     color: white;
     height: 70%;
