--- a/src/js/views/Home/Home.module.css
+++ b/src/js/views/Home/Home.module.css
@@ -14,6 +14,10 @@
     url(../../../img/home/w.jpg);
     background-size: cover;
 }
+.i {
+    /* color: #7CD1F9!important; */
+    color: blue;
+}
 .whoText {
     color: #7CD1F9;
 }
